log/flask.log
2018-07-20 01:11:59,272 - WARNING - app.py - signin_form - 19 - warning log
2018-07-20 01:12:11,453 - WARNING - app.py - signin - 25 - warning log
2018-07-20 01:12:25,573 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:15:22,424 - ERROR - app.py - log_exception - 1761 - Exception on /export [POST]
Traceback (most recent call last):
  File "D:\Python36\lib\site-packages\flask\app.py", line 2292, in wsgi_app
    response = self.full_dispatch_request()
  File "D:\Python36\lib\site-packages\flask\app.py", line 1815, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "D:\Python36\lib\site-packages\flask\app.py", line 1718, in handle_user_exception
    reraise(exc_type, exc_value, tb)
  File "D:\Python36\lib\site-packages\flask\_compat.py", line 35, in reraise
    raise value
  File "D:\Python36\lib\site-packages\flask\app.py", line 1813, in full_dispatch_request
    rv = self.dispatch_request()
  File "D:\Python36\lib\site-packages\flask\app.py", line 1799, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "app.py", line 47, in export
    eval('''_export.{ids}(start_date,end_date,'./static')'''.format(ids=ids))
  File "<string>", line 1, in <module>
  File "./model\util.py", line 201, in mdhz
    return lz_EXport.mdhz(start_date, end_date, dir_name)
  File "./model\util_lz.py", line 311, in mdhz
    lssh_data = self.lssh(start_date, end_date, dir_name)
  File "./model\util_lz.py", line 286, in lssh
    result4 = self.connect.query(self.connect.coupons, sql4)
  File "./model\util_lz.py", line 30, in query
    db = self.connect(db_name)
  File "./model\util_lz.py", line 25, in connect
    db_name, port=self.port{id}, charset='utf8')""".format(id=_id))
  File "<string>", line 2, in <module>
  File "D:\Python36\lib\site-packages\MySQLdb\__init__.py", line 86, in Connect
    return Connection(*args, **kwargs)
  File "D:\Python36\lib\site-packages\MySQLdb\connections.py", line 204, in __init__
    super(Connection, self).__init__(*args, **kwargs2)
_mysql_exceptions.OperationalError: (2003, "Can't connect to MySQL server on '183.3.143.131' (10060)")
2018-07-20 01:16:54,615 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:16:54,615 - ERROR - app.py - log_exception - 1761 - Exception on /export [POST]
Traceback (most recent call last):
  File "D:\Python36\lib\site-packages\flask\app.py", line 2292, in wsgi_app
    response = self.full_dispatch_request()
  File "D:\Python36\lib\site-packages\flask\app.py", line 1815, in full_dispatch_request
    rv = self.handle_user_exception(e)
  File "D:\Python36\lib\site-packages\flask\app.py", line 1718, in handle_user_exception
    reraise(exc_type, exc_value, tb)
  File "D:\Python36\lib\site-packages\flask\_compat.py", line 35, in reraise
    raise value
  File "D:\Python36\lib\site-packages\flask\app.py", line 1813, in full_dispatch_request
    rv = self.dispatch_request()
  File "D:\Python36\lib\site-packages\flask\app.py", line 1799, in dispatch_request
    return self.view_functions[rule.endpoint](**req.view_args)
  File "app.py", line 47, in export
    eval('''_export.{ids}(start_date,end_date,'./static')'''.format(ids=ids))
  File "<string>", line 1
    _export.'khhz(start_date,end_date,'./static')
                                      ^
SyntaxError: invalid syntax
2018-07-20 01:20:37,981 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:21:32,061 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:22:35,855 - WARNING - app.py - signin_form - 19 - warning log
2018-07-20 01:22:47,328 - WARNING - app.py - signin - 25 - warning log
2018-07-20 01:22:55,474 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:26:01,695 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:26:26,014 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:27:14,686 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:27:34,670 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:41:12,660 - WARNING - app.py - export - 41 - warning log
2018-07-20 01:45:33,418 - WARNING - app.py - export - 41 - warning log
2018-07-20 02:13:50,215 - WARNING - app.py - export - 43 - warning log
2018-07-20 02:25:45,123 - WARNING - app.py - export - 43 - warning log
2018-07-20 02:26:49,471 - WARNING - app.py - export - 43 - warning log
2018-07-20 02:32:29,119 - WARNING - app.py - export - 43 - warning log
